--- a/arpatm/static/colours.less
+++ b/arpatm/static/colours.less
@@ -1,5 +1,5 @@
 @white: #FAFAFA;
-@black: #000;
+@black: #0A0A0A;
 
 @grey: ##9E9E9E;
 @lightgrey: #F5F5F5;
@@ -38,5 +38,5 @@
 @darkorange: #E65100;
 
 
-@main-background: @darkgrey;
+@main-background: @darkbluegrey;
 @content-background: @white;
