--- a/arpatm/static/style.less
+++ b/arpatm/static/style.less
@@ -4,8 +4,9 @@
 @import 'button.less';
 
 @width: 960px;
-@import 'grid.less';
+@site-header-height: 4em;
 
+@import 'grid.less';
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 
 .text-outline(@width, @colour) {
