--- a/arpatm/templates/index/anime.html
+++ b/arpatm/templates/index/anime.html
@@ -2,11 +2,9 @@
 
 {% block body %}
 <div class="index-anime">
-    <ul>
-      {% for a in anime %}
-        <li>
-          <a href="/anime/{{ a.id }}">{{ a.name or a.name_ro or a.name_jp }} ({{ a.files | length }} files)</a>
-        </li>
+    <ul class="anime_list">
+      {% for anime in indexed %}
+        {% include "anime_row.html" ignore missing %}
       {% endfor %}
     </ul>
 </div>
