--- a/arpatm/static/search.less
+++ b/arpatm/static/search.less
@@ -1,8 +1,37 @@
 div.search {
     .container();
     
-    ul {
+    p.details {
         .span(6);
         .first();
+    }
+}
+
+ul.anime_list {
+    .span(6);
+    .first();
+
+    li.anime {
+        margin-bottom: 0.5em;
+        padding: 0.5em;
+        .rounded(0.25em);
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        &:nth-child(odd) {
+            background: lighten(@main-background, 8%);
+        }
+
+        &:nth-child(even) {
+            background: lighten(@main-background, 4%);
+        }
+
+        p.other_titles {
+            font-size: 0.7em;
+            margin: 0;
+            padding: 0 1em;
+        }
     }
 }
