--- a/arpatm/static/search.less
+++ b/arpatm/static/search.less
@@ -9,9 +9,12 @@ div.search {
 
 ul.anime_list {
     .span(6);
-    .first();
+    .first();    
+}
 
-    li.anime {
+ul.anime_list, ul.episode_list {
+    
+    li.anime, li.episode {
         margin-bottom: 0.5em;
         padding: 0.5em;
         .rounded(0.25em);
