--- a/arpatm/static/style.css
+++ b/arpatm/static/style.css
@@ -317,23 +317,38 @@ ul.anime_list {
   width: 960px;
   margin-left: 0;
 }
-ul.anime_list li.anime {
+ul.anime_list li.anime,
+ul.episode_list li.anime,
+ul.anime_list li.episode,
+ul.episode_list li.episode {
   margin-bottom: 0.5em;
   padding: 0.5em;
   -webkit-border-radius: 0.25em;
   -moz-border-radius: 0.25em;
   border-radius: 0.25em;
 }
-ul.anime_list li.anime:last-child {
+ul.anime_list li.anime:last-child,
+ul.episode_list li.anime:last-child,
+ul.anime_list li.episode:last-child,
+ul.episode_list li.episode:last-child {
   margin-bottom: 0;
 }
-ul.anime_list li.anime:nth-child(odd) {
+ul.anime_list li.anime:nth-child(odd),
+ul.episode_list li.anime:nth-child(odd),
+ul.anime_list li.episode:nth-child(odd),
+ul.episode_list li.episode:nth-child(odd) {
   background: #364850;
 }
-ul.anime_list li.anime:nth-child(even) {
+ul.anime_list li.anime:nth-child(even),
+ul.episode_list li.anime:nth-child(even),
+ul.anime_list li.episode:nth-child(even),
+ul.episode_list li.episode:nth-child(even) {
   background: #2e3d44;
 }
-ul.anime_list li.anime p.other_titles {
+ul.anime_list li.anime p.other_titles,
+ul.episode_list li.anime p.other_titles,
+ul.anime_list li.episode p.other_titles,
+ul.episode_list li.episode p.other_titles {
   font-size: 0.7em;
   margin: 0;
   padding: 0 1em;
@@ -445,46 +460,31 @@ div#anime div.anime-list {
   padding: 4.8px;
   width: 475.2px;
 }
-div#anime div.anime-list ul#episodes p {
+div#anime div.anime-list ul.episode_list p {
   margin: 0;
 }
-div#anime div.anime-list ul#episodes li {
+div#anime div.anime-list ul.episode_list li.episode {
   position: relative;
-  padding: 1em 0;
 }
-div#anime div.anime-list ul#episodes li:first-child {
-  border-top-left-radius: 0.5em;
-  border-top-right-radius: 0.5em;
-}
-div#anime div.anime-list ul#episodes li:last-child {
-  border-bottom-right-radius: 0.5em;
-  border-bottom-left-radius: 0.5em;
-}
-div#anime div.anime-list ul#episodes li:nth-child(odd) {
-  background: #263238;
-}
-div#anime div.anime-list ul#episodes li:nth-child(even) {
-  background: #607d8b;
-}
-div#anime div.anime-list ul#episodes li div {
+div#anime div.anime-list ul.episode_list li.episode div {
   display: inline-block;
   vertical-align: middle;
 }
-div#anime div.anime-list ul#episodes li div.episode-number {
+div#anime div.anime-list ul.episode_list li.episode div.episode-number {
   width: 15%;
   text-align: center;
 }
-div#anime div.anime-list ul#episodes li div.episode-title {
+div#anime div.anime-list ul.episode_list li.episode div.episode-title {
   width: 70%;
 }
-div#anime div.anime-list ul#episodes li div.episode-state {
+div#anime div.anime-list ul.episode_list li.episode div.episode-state {
   position: absolute;
   right: 0.5em;
   top: 0;
   bottom: 0;
   height: 100%;
 }
-div#anime div.anime-list ul#episodes li div.episode-state .icon {
+div#anime div.anime-list ul.episode_list li.episode div.episode-state .icon {
   background-image: url(icons/ic_action_about.png);
   background-repeat: no-repeat;
   background-position: center center;
@@ -496,11 +496,11 @@ div#anime div.anime-list ul#episodes li div.episode-state .icon {
   opacity: 0.5;
   transition: opacity 0.25s ease-in-out, background-size 0.25s ease-in-out;
 }
-div#anime div.anime-list ul#episodes li div.episode-state .icon:hover {
+div#anime div.anime-list ul.episode_list li.episode div.episode-state .icon:hover {
   opacity: 1;
   background-size: 2.1em 2.1em;
 }
-div#anime div.anime-list ul#episodes li div.episode-state .icon.loading {
+div#anime div.anime-list ul.episode_list li.episode div.episode-state .icon.loading {
   background-image: url(icons/dark/ic_action_refresh.png) !important;
   -webkit-animation: spin 1s infinite linear;
 }
@@ -512,16 +512,16 @@ div#anime div.anime-list ul#episodes li div.episode-state .icon.loading {
     -webkit-transform: rotate(360deg);
   }
 }
-div#anime div.anime-list ul#episodes li div.episode-state .icon.owned {
+div#anime div.anime-list ul.episode_list li.episode div.episode-state .icon.owned {
   background-image: url(icons/dark/ic_action_collection.png);
 }
-div#anime div.anime-list ul#episodes li div.episode-state .icon.downloading {
+div#anime div.anime-list ul.episode_list li.episode div.episode-state .icon.downloading {
   background-image: url(icons/dark/ic_action_data_usage.png);
 }
-div#anime div.anime-list ul#episodes li div.episode-state .icon.download {
+div#anime div.anime-list ul.episode_list li.episode div.episode-state .icon.download {
   background-image: url(icons/dark/ic_action_download.png);
 }
-div#anime div.anime-list ul#episodes li.ownder {
+div#anime div.anime-list ul.episode_list li.ownder {
   background: #259b24;
 }
 /*# sourceMappingURL=style.css.map */
